--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>pokhriabong higher secondary school</title>
-        <link rel="stylesheet" type="text/css" href="school.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
         <script src="https://kit.fontawesome.com/526798dda7.js" crossorigin="anonymous"></script>
 
 
