--- a/about.html.html
+++ b/about.html.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/526798dda7.js" crossorigin="anonymous"></script>
-   <link rel="stylesheet" type="text/css" href="aboutus.css">
+   <link rel="stylesheet" type="text/css" href="about.css">
     <title>About of Pokhriabong higher secondary school</title>
   
 
