--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 <footer>
     <div class="contact">
         <h3>Details</h3>
-        <p>PH -+918972395072</p>
-        <P>Email-phhs@gmail.com</P>
+        <p>PH -+919733168100</p>
+        <P>pokhriabonghighschoo@gmail.com</P>
 
     </div>
     
