--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="contact">
         <h3>Details</h3>
         <p>PH -+919733168100</p>
-        <P>pokhriabonghighschoo@gmail.com</P>
+        <P>pokhriabonghighschoo2018@gmail.com</P>
 
     </div>
     
