--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li> <a href="gallery.html">Gallery</a></li>
           <li> <a href="#">Addmission</a></li>
           <li> <a href="#"> Results</a></li>
-          <li> <a href="#"> Registration</a> </li>
+          <li> <a href="registration.html"> Registration</a> </li>
           <li> <a href="#">New Update</a></li>
           </ul>
         
