--- a/registration.html
+++ b/registration.html
@@ -496,7 +496,7 @@
 <body>
     <div class="main_container">
         <div class="logo">
-      <img src="images/logo.png"alt="logo" height="110px" width="110px">
+      <img src="image/logo.png"alt="logo" height="110px" width="110px">
      
 
       
