--- a/registration.html
+++ b/registration.html
@@ -442,17 +442,20 @@
     }
     #file{
             
-            left:40%;
+            left:30%;
         }
         #sub{
             width:50px;
             position: absolute;
-            left:52%;
+            left:50%;
 
         }
     .reg p{
             font-size: 15px;
         }
+    .input_field{
+        width:100vw;
+    }
         .input_field label{
             font-size: 18px;
         }
