--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
          <li> 
         <i class="fa-solid fa-circle-user"></i>
-          <a href="#">SIGN UP</a></li>
+          <a href="signup.html">SIGN UP</a></li>
           <li><i class="fa-solid fa-square-caret-down"></i></i><a href="#">MORE</a></i> 
             
             <ul>
