--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
         .main_container{
             width:100vw;
             height: 88vh;
-            background-image:url(images/blue.jpg);
+            background-image:url(image/blue.jpg);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
