--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 .main_div{
     height: 88vh;
     width: 100vw;
-    background-image:url('images/login.png');
+    background-image:url('image/login.png');
     background-size: cover;
     background-position: 100% 100%;
     background-repeat: no-repeat;
