--- a/login.html
+++ b/login.html
@@ -174,7 +174,7 @@ footer{
 }
 @media(min-width:600px) and (max-width:990px){
     .main_div{
-    height: auto;
+    height: 100vh;
     overflow-x: hidden;
 }
 .form {
