--- a/login.html
+++ b/login.html
@@ -174,8 +174,9 @@ footer{
 }
 @media(min-width:600px) and (max-width:990px){
     .main_div{
-    height: 100vh;
+    height: auto;
     overflow-x: hidden;
+        padding-bottom:40px;
 }
 .form {
     margin-top: 60px;
