--- a/signup.html
+++ b/signup.html
@@ -170,6 +170,7 @@
         .main_container{
            height: auto;
            overflow-x: hidden;
+           padding-bottom:20px;
            
             
        }
