--- a/login.html
+++ b/login.html
@@ -179,7 +179,7 @@ footer{
         padding-bottom:80px;
 }
 .form {
-    margin-top: 150px;
+    margin-top:20%;
     width: 90%;
     height: auto;
     padding-bottom:20px;
@@ -209,7 +209,7 @@ button{
     padding:8px 30px;
 }
 footer{
-    margin-top: 50px;
+    margin-top: 20%;
     height: auto;
     display: block;
 }
