--- a/login.html
+++ b/login.html
@@ -247,7 +247,7 @@ footer{
     overflow-x: hidden;
 }
 .form {
-    margin-top: 60px;
+    margin-top:50%;
     width: 90%;
     height: auto;
     padding-bottom: 20px;
