--- a/login.html
+++ b/login.html
@@ -283,6 +283,7 @@ footer{
     height: auto;
     display: block;
     overflow-x: hidden;
+    Padding-top:20px;
 }
 .contact{
     font-size: 15px;
